--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native": "0.54.0",
     "react-native-navigation": "^1.1.439",
     "react-native-vector-icons": "^4.6.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "uglify-es": "^3.3.9"
   }
 }
